# jigSolver

./: .gitignore  Pipfile  README.md  edgeAnalyzer.py  edgeDetector.py  edgeMatching.py  image.html  image.py  merge.py  pyproject.toml
src/: gui.py  run.py  solve.py  test.py  web.py
src/core/: Vector.py  board.py  builder.py  config.py  connect.py  pieces.py  sides.py  util.py
src/http/: board.css  board.html  board.js  cam.html  canvas.js  common.css  index.html  puzzle.js  style.css
